--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,4 +5,4 @@ include MANIFEST.in
 include requirements.txt
 include setup.py
 recursive-include metadisassembler *
-recursive-include metadisassembler/config *
+include metadisassembler/data/bb_library.pickle
